# pyhexa

./: README.md  pyproject.toml
src/module/: main.py
src/module/api/: alert_client.py  container.py
src/module/domain/features/: __init__.py  get_metrics_feature.py
src/module/domain/models/: metrics.py
src/module/domain/ports/: alert_port.py
src/module/persistence/: alert_repository.py  container.py  db_connection.py
