[tool.poetry]
name = "pyhexa"
version = "0.1.0"
description = ""
authors = ["Mohamed AIT ABDERRAHMAN <mohamed.aitabderrahman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.11"
dependency-injector = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.module.api"